# social-scrapper

./: .gitignore  Cargo.toml  docker-compose.yaml  kafka_topics.sh
crates/kafka/: Cargo.toml
crates/kafka/src/: config.rs  consumer.rs  lib.rs  producer.rs
migration/: social_account.sql
social/: Cargo.toml
social-module/: Cargo.toml  build.rs
social-module/proto/: helloworld.proto
social-module/proto/api/helloworld/v1/: helloworld.proto
social-module/proto/api/social_accounts/v1/: social_accounts.proto  users.proto
social-module/social-grpc/: Cargo.toml  build.rs
social-module/social-grpc/src/: lib.rs
social-module/src/: client.rs  main.rs  server.rs
social-module/src/api/: mod.rs  server.rs
social-module/src/api/social_accounts/: mod.rs  service.rs
social-store/: Cargo.toml
social-store/models/: Cargo.toml
social-store/models/src/: enums.rs  lib.rs  schema.rs  social_account.rs  social_account1.rs
social-store/models/src/query/: mod.rs  social_account.rs
social-store/src/: lib.rs  main.rs  store.rs
social-store/src/repositories/: social_account.rs
social-task/: Cargo.toml
social-task/src/: main.rs
social/src/: crawlers.rs  lib.rs  main.rs  services.rs  utils.rs
social/src/crawling/: apis.rs  gql.rs  mod.rs  sessions.rs
social/src/infra/schema/: profile.rs
src/: main.rs
src/crawling/: apis.rs  sessions.rs
