[workspace]
resolver = "2"
members = [
    "social",
    "social-store",
    "social-store/models",
]

[workspace.package]
name = "social-scrapper"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = { version = "0.1.74" }
reqwest = { version = "0.12.5", features = ["json"]}
serde_json = { version = "1.0.122" }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
chrono = { version = "0.4.31" }
diesel = { version = "2.1.0", features = ["chrono", "uuid", "serde_json", "numeric"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
error-stack = "0.5.0"
thiserror = "1.0.49"
models = { path = "social-store/models" }
social-store = { path = "social-store" }