[workspace]
resolver = "2"
members = [
    "crates/kafka",
    "social",
    "social-store",
    "social-store/models",
    "crates/kafka",
    "social-task",
    "social-module",
    "social-module/social-grpc",
]

[workspace.package]
name = "social-scrapper"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = { version = "0.1.74" }
envconfig = "0.10.0"
reqwest = { version = "0.12.5", features = ["json"]}
serde_json = { version = "1.0.122" }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
chrono = { version = "0.4.31" }
diesel = { version = "2.1.0", features = ["chrono", "uuid", "serde_json", "numeric"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
error-stack = "0.5.0"
thiserror = "1.0.49"
rdkafka = "0.36.0"
rand = "0.3.15"
futures = "0.3.0"

log = "0.4.20"
tonic = "0.10.2"
tonic-build = "0.10.2"
tonic-health = "0.10.2"
tonic-reflection = "0.10.2"
tonic-web = "0.10.2"
tower-http = "0.4"
prost = "0.12.3"


models = { path = "social-store/models" }
social-store = { path = "social-store" }
kafka = { path = "crates/kafka"}
social-grpc = { path = "social-module/social-grpc" }
social = { path = "social" }