[package]
name = "social-module"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"